plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'space'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
jar {
    enabled = false
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA 스타터 추가
	runtimeOnly 'com.h2database:h2'		// test용 db인 h2Database 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation'		// validation 추가
	implementation 'org.springframework.boot:spring-boot-starter-security'

//	 QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//Spring Security Test 의존성
	testImplementation 'org.springframework.security:spring-security-test'

	//JDA
	implementation("net.dv8tion:JDA:5.2.1") { // replace $version with the latest version
		// Optionally disable audio natives to reduce jar size by excluding `opus-java`
		// Gradle DSL:
		// exclude module: 'opus-java'
		// Kotlin DSL:
		// exclude(module="opus-java")
	}
}

test {
	useJUnitPlatform()
}

clean {
	delete file('src/main/generated')
}